final project npm scripts troubles

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "git-test",
+  "name": "portfolio",
   "version": "1.0.0",
-  "description": "Git and NPM",
+  "description": "Final project for Nucamp Bootstrap course",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "lite": "lite-server",
+    "scss": "node-sass -o css/ css/",
     "start": "npm run lite",
-    "lite": "lite-server"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git"
@@ -14,6 +15,14 @@
   "author": "Crystal Root",
   "license": "ISC",
   "devDependencies": {
-    "lite-server": "^2.5.4"
+    "lite-server": "^2.6.1",
+    "node-sass": "^4.14.1"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "bootstrap": "^4.5.2",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1"
   }
 }
